<resources>
    <string name="app_name">Studio</string>
    <string name="action_drawer_open">Open</string>
    <string name="action_drawer_close">Close</string>
    <string name="create">Create</string>
    <string name="hyper"><![CDATA[</hyper>]]></string>

    <string name="action_settings">Settings</string>
    <string name="about_name">Name</string>
    <string name="about_author">Author</string>
    <string name="about_desc">Description</string>
    <string name="about_keywords">Keywords</string>
    <string name="create_keywords">Keywords (separated with commas)</string>
    <string name="create_favicon">Favicon</string>
    <string name="favicon_default">Default</string>
    <string name="favicon_choose">Choose</string>
    <string name="dark_theme">Night Mode</string>
    <string name="dark_theme_desc">Put a little less stress on your eyes.</string>
    <string name="about_project">About</string>

    <string name="permission_storage_rationale">Storage permission is needed to create and edit projects.</string>
    <string name="open_in_web_browser">Web Browser</string>
    <string name="run_project">Run</string>

    <string name="allow_content_access">Allow Content Access</string>
    <string name="allow_content_access_desc">Set content URL access support.</string>
    <string name="allow_file_access">Allow File Access</string>
    <string name="allow_file_access_desc">Set file access support.</string>
    <string name="allow_file_access_from_file_urls">Allow File Access From File URLs</string>
    <string name="allow_file_access_from_file_urls_desc">Set whether JavaScript running in the context of a file scheme URL can access content from other file scheme URLs.</string>
    <string name="allow_universal_access_from_file_urls">Allow Universal Access From File URLs</string>
    <string name="allow_universal_access_from_file_urls_desc">Set whether JavaScript running in the context of a file scheme URL can access content from any origin.</string>
    <string name="block_network_image">Block Network Image</string>
    <string name="block_network_image_desc">Set whether to load image resources from the network.</string>
    <string name="block_network_loads">Block Network Loads</string>
    <string name="block_network_loads_desc">Set whether to load any resources from the network.</string>
    <string name="built_in_zoom_controls">BuiltIn Zoom Controls</string>
    <string name="built_in_zoom_controls_desc">Set whether the builtin zoom mechanisms are being used.</string>
    <string name="database_enabled">Database</string>
    <string name="database_enabled_desc">Set whether the database storage API is enabled.</string>
    <string name="display_zoom_controls">Display Zoom Controls</string>
    <string name="display_zoom_controls_desc">Set whether to display onscreen zoom controls while using builtin zoom mechanisms.</string>
    <string name="dom_storage_enabled">DOM Storage</string>
    <string name="dom_storage_enabled_desc">Set whether the DOM Storage APIs are enabled.</string>
    <string name="javascript_can_open_windows_automatically">JavaScript Can Open Windows Automatically</string>
    <string name="javascript_can_open_windows_automatically_desc">Set whether JavaScript can open windows automatically.</string>
    <string name="javascript_enabled">JavaScript</string>
    <string name="javascript_enabled_desc">Set whether JavaScript is enabled.</string>
    <string name="load_with_overview_mode">Load with Overview Mode</string>
    <string name="load_with_overview_mode_desc">Set whether pages are loaded in overview mode.</string>
    <string name="loads_images_automatically">Automatic Image Loading</string>
    <string name="loads_images_automatically_desc">Set whether images are loaded automatically.</string>
    <string name="save_form_dats">Save Form Data</string>
    <string name="save_form_data_desc">Set whether form data is saved.</string>
    <string name="use_wide_view_port">Wide View Port</string>
    <string name="use_wide_view_port_desc">Set whether the \"viewport\" HTML meta tag is supported or will a wide viewport be used.</string>
    <string name="web_settings">Settings</string>
    <string name="replace_from">Replace From</string>
    <string name="replace_to">Replace To</string>
    <string name="view_logs">Logs</string>

    <string name="import_not_java">Import</string>
    <string name="change_undone">This change cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="project_success">Your project has been successfully created!</string>
    <string name="project_fail">It seems something went wrong while creating the project.</string>
    <string name="name_error">Please enter a name</string>
    <string name="author_error">Please enter an author</string>
    <string name="desc_error">Please enter a description</string>
    <string name="keywords_error">Please enter some keywords</string>
    <string name="refactor">Refactor</string>
    <string name="comment">Comment</string>
    <string name="replace">Replace</string>
    <string name="empty_field_no_no">This field cannot be empty</string>
    <string name="not_text_file">The selected file is not a text or image file.</string>
    <string name="new_not_java">New</string>
    <string name="file_success">Successfully created file.</string>
    <string name="file_fail">There was a problem while creating this file.</string>
    <string name="name">Name</string>
    <string name="loading">Loading…</string>
    <string name="remove">Remove</string>
    <string name="git">Git</string>
    <string name="git_init">Init</string>
    <string name="git_add">Add</string>
    <string name="git_commit">Commit</string>
    <string name="commit_message">Commit Message</string>
    <string name="commit_message_empty">Please enter a commit message.</string>
    <string name="git_log">Log</string>
    <string name="git_status">Status</string>
    <string name="branch">Branch</string>
    <string name="checkout">Checkout</string>
    <string name="close">Close</string>

    <string name="file_problem">There was a problem reading this file.</string>
    <string name="remote">Remote</string>
    <string name="action_search">Search</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT!</string>

    <string name="slide_1_title">Studio!</string>
    <string name="slide_1_desc">An intuitive web development IDE.</string>

    <string name="slide_2_title">Code Editor</string>
    <string name="slide_2_desc">Containing features such as line numbers, code refactoring, color formatting, auto indentation, auto completion and more.</string>

    <string name="slide_3_title">Git Integration</string>
    <string name="slide_3_desc">Support for many different Git functions for version control within your projects.</string>

    <string name="slide_4_title">Get Started</string>
    <string name="slide_4_desc">Hope those features have got you excited. Many more await you. Get started by creating a project!</string>
    <string name="branch_name_empty">Please enter a branch name.</string>
    <string name="save_changes_done">Saved changes.</string>
    <string name="commit_hash_copy">Commit hash copied.</string>
    <string name="added_to_stage">Added all files to stage.</string>
    <string name="repo_init">"Initialized repository at: "</string>
    <string name="folder_exists">The folder already exists.</string>
    <string name="remote_error">Please enter a remote</string>
    <string name="label_legal">Legal</string>
    <string name="notices">Notices</string>
    <string name="file_name">File name</string>
    <string name="folder_name">Folder name</string>
    <string name="new_name">New name</string>

    <array name="slide_titles">
        <item>@string/slide_1_title</item>
        <item>@string/slide_2_title</item>
        <item>@string/slide_3_title</item>
        <item>@string/slide_4_title</item>
    </array>

    <array name="slide_desc">
        <item>@string/slide_1_desc</item>
        <item>@string/slide_2_desc</item>
        <item>@string/slide_3_desc</item>
        <item>@string/slide_4_desc</item>
    </array>

    <string name="dark_theme_editor">Dark Coding Theme</string>
    <string name="dark_theme_editor_desc">Less stress on your eyes… while coding!</string>

    <string name="custom_notices_format_style" translatable="false">
        p.license {
        %1$s
        }
        body {
        font-family: sans-serif;
        overflow-wrap: break-word;
        %2$s
        }
        pre {
        %3$s
        padding: 1em;
        white-space: pre-wrap;
        }
        li {
        %4$s
        }
        li a {
        %5$s
        }
    </string>

    <string name="rgba_background_format">background-color:rgba(%1$d,%2$d,%3$d,%4$1f);</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="git_user_format">%1$s &lt;%2$s&gt;</string>

</resources>
