<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_import_file"
        android:title="@string/import_not_java"
        app:showAsAction="never" />
    <item
        android:id="@+id/run"
        android:icon="@drawable/ic_compile"
        android:title="Run"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/git"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_git_init"
                android:title="@string/git_init"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_add"
                android:title="@string/git_add"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_commit"
                android:title="@string/git_commit"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_push"
                android:title="Push"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_pull"
                android:title="Pull"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_log"
                android:title="@string/git_log"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_diff"
                android:title="Diff"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_status"
                android:title="@string/git_status"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_git_branch"
                android:title="@string/branch"
                app:showAsAction="never">

                <menu>

                    <item
                        android:id="@+id/action_git_branch_new"
                        android:title="@string/new_not_java"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_git_branch_remove"
                        android:title="@string/remove"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_git_branch_checkout"
                        android:title="@string/checkout"
                        app:showAsAction="never" />

                </menu>

            </item>

            <item
                android:id="@+id/action_git_remote"
                android:title="@string/remote"
                app:showAsAction="never" />

        </menu>

    </item>

    <item
        android:id="@+id/action_analyze"
        android:title="Analyze"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_run"
        android:title="@string/run_project"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view"
        android:title="View"
        app:showAsAction="never" />

</menu>