<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="App">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_theme"
            android:key="dark_theme"
            android:summary="@string/dark_theme_desc"
            android:title="@string/dark_theme" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Editor">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_code_theme"
            android:key="dark_theme_editor"
            android:summary="@string/dark_theme_editor_desc"
            android:title="@string/dark_theme_editor" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_line_numbers"
            android:key="show_line_numbers"
            android:summary="Display line numbers next to Editor."
            android:title="Show Line Numbers" />

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_wordwrap"
            android:key="wordwrap"
            android:summary="Use soft wrap in editor."
            android:title="Wordwrap" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Misc">

        <androidx.preference.Preference
            android:icon="@drawable/ic_clear"
            android:key="factory_reset"
            android:summary="This will delete all of your projects! Use with caution."
            android:title="Factory Reset" />

    </androidx.preference.PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/label_legal">

        <androidx.preference.Preference
            android:icon="@drawable/ic_license"
            android:key="notices"
            android:title="@string/notices" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>